--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <div class="grid-container">
+  <div class="grid-container"></div>  
+  <!-- <div class="grid-container">
         <div class="grid-row">
           <div class="grid-cell">
             <img src="img/goblin.png" class="icon">
@@ -35,7 +36,7 @@
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
         </div>
-      </div>
+      </div> -->
     
 </body>
 </html>
